changed body background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #314578;
+  background-color: #0cbaba;
+  background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 }
 
 .App {
